# CMakeLearning

Lesson1/: CMakeLists.txt  main.cpp
Lesson2/: CMakeLists.txt
Lesson2/lib/: hello.cpp
Lesson2/src/: main.cpp
Lesson3/: CMakeLists.txt
Lesson3/lib/: CMakeLists.txt
Lesson3/lib/inc/: CMakeLists.txt
Lesson3/src/: CMakeLists.txt
lesson0/: CMakeLists.txt  hello.cpp
